Source/WebCore/storage/StorageAreaImpl.cpp
@@ -102,13 +102,6 @@ StorageAreaImpl::StorageAreaImpl(StorageAreaImpl* area)
 
 bool StorageAreaImpl::disabledByPrivateBrowsingInFrame(const Frame* frame) const
 {
-#if PLATFORM(CHROMIUM)
-    // The frame pointer can be NULL in Chromium since this call is made in a different
-    // process from where the Frame object exists.  Luckily, private browseing is
-    // implemented differently in Chromium, so it'd never return true anyway.
-    ASSERT(!frame);
-    return false;
-#else
     if (!frame->page())
         return true;
     if (!frame->page()->settings()->privateBrowsingEnabled())
@@ -116,7 +109,6 @@ bool StorageAreaImpl::disabledByPrivateBrowsingInFrame(const Frame* frame) const
     if (m_storageType != LocalStorage)
         return true;
     return !SchemeRegistry::allowsLocalStorageAccessInPrivateBrowsing(frame->document()->securityOrigin()->protocol());
-#endif
 }
 
 unsigned StorageAreaImpl::length(Frame*) const
@@ -143,7 +135,7 @@ String StorageAreaImpl::getItem(const String& key, Frame*) const
     return m_storageMap->getItem(key);
 }
 
-String StorageAreaImpl::setItem(const String& key, const String& value, ExceptionCode& ec, Frame* frame)
+void StorageAreaImpl::setItem(const String& key, const String& value, ExceptionCode& ec, Frame* frame)
 {
     ASSERT(!m_isShutdown);
     ASSERT(!value.isNull());
@@ -151,7 +143,7 @@ String StorageAreaImpl::setItem(const String& key, const String& value, Exceptio
 
     if (disabledByPrivateBrowsingInFrame(frame)) {
         ec = QUOTA_EXCEEDED_ERR;
-        return String();
+        return;
     }
 
     String oldValue;
@@ -162,25 +154,24 @@ String StorageAreaImpl::setItem(const String& key, const String& value, Exceptio
 
     if (quotaException) {
         ec = QUOTA_EXCEEDED_ERR;
-        return oldValue;
+        return;
     }
 
     if (oldValue == value)
-        return oldValue;
+        return;
 
     if (m_storageAreaSync)
         m_storageAreaSync->scheduleItemForSync(key, value);
     StorageEventDispatcher::dispatch(key, oldValue, value, m_storageType, m_securityOrigin.get(), frame);
-    return oldValue;
 }
 
-String StorageAreaImpl::removeItem(const String& key, Frame* frame)
+void StorageAreaImpl::removeItem(const String& key, Frame* frame)
 {
     ASSERT(!m_isShutdown);
     blockUntilImportComplete();
 
     if (disabledByPrivateBrowsingInFrame(frame))
-        return String();
+        return;
 
     String oldValue;
     RefPtr<StorageMap> newMap = m_storageMap->removeItem(key, oldValue);
@@ -188,24 +179,23 @@ String StorageAreaImpl::removeItem(const String& key, Frame* frame)
         m_storageMap = newMap.release();
 
     if (oldValue.isNull())
-        return oldValue;
+        return;
 
     if (m_storageAreaSync)
         m_storageAreaSync->scheduleItemForSync(key, String());
     StorageEventDispatcher::dispatch(key, oldValue, String(), m_storageType, m_securityOrigin.get(), frame);
-    return oldValue;
 }
 
-bool StorageAreaImpl::clear(Frame* frame)
+void StorageAreaImpl::clear(Frame* frame)
 {
     ASSERT(!m_isShutdown);
     blockUntilImportComplete();
 
     if (disabledByPrivateBrowsingInFrame(frame))
-        return false;
+        return;
 
     if (!m_storageMap->length())
-        return false;
+        return;
 
     unsigned quota = m_storageMap->quota();
     m_storageMap = StorageMap::create(quota);
@@ -213,7 +203,6 @@ bool StorageAreaImpl::clear(Frame* frame)
     if (m_storageAreaSync)
         m_storageAreaSync->scheduleClear();
     StorageEventDispatcher::dispatch(String(), String(), String(), m_storageType, m_securityOrigin.get(), frame);
-    return true;
 }
 
 bool StorageAreaImpl::contains(const String& key, Frame*) const
