Source/WebKit/chromium/src/WebStorageEventDispatcherImpl.cpp
@@ -29,18 +29,19 @@
  */
 
 #include "config.h"
-#include "WebStorageEventDispatcherImpl.h"
+#include "WebStorageEventDispatcher.h"
 
 #include "KURL.h"
 #include "SecurityOrigin.h"
 #include "StorageAreaProxy.h"
+#include "WebViewImpl.h"
 
 #include "platform/WebURL.h"
 #include <wtf/PassOwnPtr.h>
 
-namespace WebKit {
+// FIXME: move this file to WebStorageEventDispatcher.cpp
 
-extern const char* pageGroupName;
+namespace WebKit {
 
 void WebStorageEventDispatcher::dispatchLocalStorageEvent(
         const WebString& key, const WebString& oldValue,
@@ -50,7 +51,7 @@ void WebStorageEventDispatcher::dispatchLocalStorageEvent(
 {
     RefPtr<WebCore::SecurityOrigin> securityOrigin = WebCore::SecurityOrigin::create(origin);
     WebCore::StorageAreaProxy::dispatchLocalStorageEvent(
-            pageGroupName, key, oldValue, newValue, securityOrigin.get(), pageURL,
+            WebViewImpl::defaultPageGroup(), key, oldValue, newValue, securityOrigin.get(), pageURL,
             sourceAreaInstance, originatedInProcess);
 }
 
@@ -62,31 +63,8 @@ void WebStorageEventDispatcher::dispatchSessionStorageEvent(
 {
     RefPtr<WebCore::SecurityOrigin> securityOrigin = WebCore::SecurityOrigin::create(origin);
     WebCore::StorageAreaProxy::dispatchSessionStorageEvent(
-            pageGroupName, key, oldValue, newValue, securityOrigin.get(), pageURL,
+            WebViewImpl::defaultPageGroup(), key, oldValue, newValue, securityOrigin.get(), pageURL,
             sessionNamespace, sourceAreaInstance, originatedInProcess);
-}
-
-
-// FIXME: remove the WebStorageEventDispatcherImpl class soon.
-
-WebStorageEventDispatcher* WebStorageEventDispatcher::create()
-{
-    return new WebStorageEventDispatcherImpl();
-}
-
-WebStorageEventDispatcherImpl::WebStorageEventDispatcherImpl()
-    : m_eventDispatcher(adoptPtr(new WebCore::StorageEventDispatcherImpl(pageGroupName)))
-{
-    ASSERT(m_eventDispatcher);
-}
-
-void WebStorageEventDispatcherImpl::dispatchStorageEvent(const WebString& key, const WebString& oldValue,
-                                                         const WebString& newValue, const WebString& origin,
-                                                         const WebURL& pageURL, bool isLocalStorage)
-{
-    WebCore::StorageType storageType = isLocalStorage ? WebCore::LocalStorage : WebCore::SessionStorage;
-    RefPtr<WebCore::SecurityOrigin> securityOrigin = WebCore::SecurityOrigin::createFromString(origin);
-    m_eventDispatcher->dispatchStorageEvent(key, oldValue, newValue, securityOrigin.get(), pageURL, storageType);
 }
 
 } // namespace WebKit
